--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,6 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.28'
     kapt 'com.google.dagger:dagger-compiler:2.27'
     implementation "io.coil-kt:coil:0.11.0"
+
+    debugImplementation 'androidx.fragment:fragment-testing:1.2.5'
 }
