--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,35 @@ buildscript {
     }
 }
 
+plugins {
+    id "io.gitlab.arturbosch.detekt" version "1.10.0"
+    id "org.jlleitschuh.gradle.ktlint" version "9.2.1"
+}
+
+subprojects {
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
+    ktlint {
+        debug = false
+    }
+}
+
+detekt {
+    toolVersion = "1.10.0"
+    config = files("config/detekt/detekt.yml")
+    buildUponDefaultConfig = true
+    failFast = true
+
+    input = files("app/src/main/java", "app/src/main/kotlin")
+
+    reports {
+        html {
+            enabled = true
+            destination = file("app/build/detekt/detekt.html")
+        }
+    }
+}
+tasks.detekt.jvmTarget = "1.8"
+
 allprojects {
     repositories {
         google()
